--- a/config.json
+++ b/config.json
@@ -5,6 +5,10 @@
       "name": "index",
       "url": "https://m.colafun.com/0-0-0-0-1-0.html?p=${pageNumber}",
       "standardMedia": {
+        "base": {
+          "css": "a",
+          "arrt": "href"
+        },
         "id": {
           "css": "a",
           "arrt": "href"
