--- a/alpha_v1/config.json
+++ b/alpha_v1/config.json
@@ -1,10 +1,11 @@
 {
   "name": "粵語劇",
   "host": "https://m.colafun.com",
+  "description": "海量粵語節目",
   "files": ["app.js"],
   "standardMediaEpisode": {
     "base": {
-      "css": "#item-url-0 a"
+      "css": "#item-url-1 a"
     },
     "id": {
       "arrt": "href"
@@ -21,16 +22,16 @@
     },
     "javascriptStep": [
       {
-        "step": 1,
+        "step": 2,
         "type": "callFunction",
         "name": "playURL"
       },
       {
-        "step": 2,
+        "step": 3,
         "type": "http-get"
       },
       {
-        "step": 3,
+        "step": 4,
         "type": "callFunction",
         "name": "addressParse"
       },
@@ -45,34 +46,6 @@
       "key": "index",
       "title": "最近更新",
       "url": "https://m.colafun.com/0-0-0-0-1-0.html?p=${pageNumber}",
-      "standardMedia": {
-        "base": {
-          "css": ".card"
-        },
-        "id": {
-          "css": "a",
-          "arrt": "href"
-        },
-        "title": {
-          "css": ".card-title"
-        },
-        "cover": {
-          "css": ".card-img-top",
-          "arrt": "data-original"
-        },
-        "description": {
-          "css": ".badge-primary"
-        },
-        "detailURL": {
-          "css": "a",
-          "arrt": "href"
-        }
-      }
-    },
-    {
-      "key": "guzhuang",
-      "title": "古裝",
-      "url": "https://m.colafun.com/0-1-0-0-1-0.html?p=${pageNumber}",
       "standardMedia": {
         "base": {
           "css": ".card"
