調整了搜索的匹配

--- a/plugin_wogg/config.json
+++ b/plugin_wogg/config.json
@@ -63,7 +63,7 @@
     "javascript": "Player"
   },
   "search": {
-    "url": "http://wogg.link/index.php/vodsearch/-------------.html?wd=${keyword}",
+    "url": "https://wogg.link/index.php/vodsearch/-------------.html?wd=${keyword}",
     "javascript": "buildMedias"
   }
 }
