js插件增加權限檢查 permission

--- a/plugin_wogg/config.json
+++ b/plugin_wogg/config.json
@@ -3,6 +3,7 @@
   "description": "阿里雲盤資源庫",
   "host": "https://wogg.link/",
   "files": ["app.js", "txml.js"],
+  "permission": "AliDrive",
   "pages": [
     {
       "key": "index",
