--- a/plugin_wogg/config.json
+++ b/plugin_wogg/config.json
@@ -20,7 +20,7 @@
       "javascript": "buildMedias"
     },
     {
-      "key": "movie",
+      "key": "tvshow",
       "title": "電視劇",
       "url": "https://wogg.link/index.php/vodshow/2--------${pageNumber}---.html",
       "timeout": 5,
