玩偶哥哥修正搜索問題

--- a/plugin_wogg/config.json
+++ b/plugin_wogg/config.json
@@ -64,7 +64,8 @@
     "javascript": "Player"
   },
   "search": {
+    "timeout": 10,
     "url": "https://wogg.link/index.php/vodsearch/-------------.html?wd=${keyword}",
-    "javascript": "buildMedias"
+    "javascript": "Search"
   }
 }
