--- a/plugin_wogg/config.json
+++ b/plugin_wogg/config.json
@@ -1,6 +1,7 @@
 {
   "name": "玩偶哥哥",
   "description": "阿里雲盤資源庫",
+  "notification": "wogg.link 需要添加到直連名單",
   "host": "https://wogg.link/",
   "files": ["app.js", "txml.js"],
   "permission": "AliDrive",
