--- a/plugin_wogg/config.json
+++ b/plugin_wogg/config.json
@@ -1,57 +1,57 @@
 {
   "name": "玩偶哥哥",
   "description": "阿里雲盤資源庫",
-  "notification": "wogg.link 需要添加到直連名單",
-  "host": "https://wogg.link/",
+  "notification": "tvfan.xxooo.cf 需要添加到直連名單",
+  "host": "https://tvfan.xxooo.cf/",
   "files": ["app.js", "txml.js"],
   "permission": "AliDrive",
   "pages": [
     {
       "key": "index",
       "title": "首頁",
-      "url": "https://wogg.link?page=${pageNumber}",
+      "url": "https://tvfan.xxooo.cf?page=${pageNumber}",
       "timeout": 10,
       "javascript": "buildMedias_index"
     },
     {
       "key": "movie",
       "title": "電影",
-      "url": "https://wogg.link/index.php/vodshow/1--------${pageNumber}---.html",
+      "url": "https://tvfan.xxooo.cf/index.php/vodshow/1--------${pageNumber}---.html",
       "timeout": 10,
       "javascript": "buildMedias"
     },
     {
       "key": "tvshow",
       "title": "電視劇",
-      "url": "https://wogg.link/index.php/vodshow/2--------${pageNumber}---.html",
+      "url": "https://tvfan.xxooo.cf/index.php/vodshow/2--------${pageNumber}---.html",
       "timeout": 10,
       "javascript": "buildMedias"
     },
     {
       "key": "anime",
       "title": "動漫",
-      "url": "https://wogg.link/index.php/vodshow/3--------${pageNumber}---.html",
+      "url": "https://tvfan.xxooo.cf/index.php/vodshow/3--------${pageNumber}---.html",
       "timeout": 10,
       "javascript": "buildMedias"
     },
     {
       "key": "varietyShow",
       "title": "综艺",
-      "url": "https://wogg.link/index.php/vodshow/4--------${pageNumber}---.html",
+      "url": "https://tvfan.xxooo.cf/index.php/vodshow/4--------${pageNumber}---.html",
       "timeout": 10,
       "javascript": "buildMedias"
     },
     {
       "key": "shorts",
       "title": "短剧片库",
-      "url": "https://wogg.link/index.php/vodshow/6--------${pageNumber}---.html",
+      "url": "https://tvfan.xxooo.cf/index.php/vodshow/6--------${pageNumber}---.html",
       "timeout": 10,
       "javascript": "buildMedias"
     },
     {
       "key": "music",
       "title": "音乐片库",
-      "url": "https://wogg.link/index.php/vodshow/5--------${pageNumber}---.html",
+      "url": "https://tvfan.xxooo.cf/index.php/vodshow/5--------${pageNumber}---.html",
       "timeout": 10,
       "javascript": "buildMedias"
     }
@@ -66,7 +66,7 @@
   },
   "search": {
     "timeout": 10,
-    "url": "https://wogg.link/index.php/vodsearch/-------------.html?wd=${keyword}",
+    "url": "https://tvfan.xxooo.cf/index.php/vodsearch/-------------.html?wd=${keyword}",
     "javascript": "Search"
   }
 }
