增加歐樂插件

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "browserify": "^17.0.0",
+    "crypto-js": "^4.2.0",
+    "engify": "^0.0.4",
+    "js-md5": "^0.8.3",
     "node-fetch": "^2.7.0",
     "txml": "^5.1.1"
   }
