追加了歐樂搜尋的功能

--- a/plugin_olevod/config.json
+++ b/plugin_olevod/config.json
@@ -51,7 +51,7 @@
   },
   "search": {
     "timeout": 20,
-    "url": "https://tvfan.xxooo.cf/index.php/vodsearch/-------------.html?wd=${keyword}",
+    "url": "https://api.olelive.com/v1/pub/index/search/${keyword}/vod/0/1/4",
     "javascript": "Search"
   }
 }
