--- a/plugin_wogg/config.json
+++ b/plugin_wogg/config.json
@@ -1,7 +1,7 @@
 {
   "name": "玩偶哥哥",
   "description": "阿里雲盤資源庫",
-  "notification": "tvfan.xxooo.cf 需要添加到直連名單",
+  "notification": "",
   "host": "https://tvfan.xxooo.cf/",
   "files": ["app.js", "txml.js"],
   "permission": "AliDrive",
