--- a/plugin_wogg/config.json
+++ b/plugin_wogg/config.json
@@ -2,7 +2,7 @@
   "name": "玩偶哥哥",
   "description": "阿里雲盤資源庫",
   "notification": "",
-  "host": "https://tvfan.xxooo.cf/",
+  "host": "https://wogg.link/",
   "files": ["app.js", "txml.js"],
   "permission": "AliDrive",
   "pages": [
@@ -16,42 +16,42 @@
     {
       "key": "movie",
       "title": "電影",
-      "url": "https://tvfan.xxooo.cf/index.php/vodshow/1--------${pageNumber}---.html",
+      "url": "https://wogg.link/index.php/vodshow/1--------${pageNumber}---.html",
       "timeout": 120,
       "javascript": "buildMedias"
     },
     {
       "key": "tvshow",
       "title": "電視劇",
-      "url": "https://tvfan.xxooo.cf/index.php/vodshow/2--------${pageNumber}---.html",
+      "url": "https://wogg.link/index.php/vodshow/2--------${pageNumber}---.html",
       "timeout": 120,
       "javascript": "buildMedias"
     },
     {
       "key": "anime",
       "title": "動漫",
-      "url": "https://tvfan.xxooo.cf/index.php/vodshow/3--------${pageNumber}---.html",
+      "url": "https://wogg.link/index.php/vodshow/3--------${pageNumber}---.html",
       "timeout": 120,
       "javascript": "buildMedias"
     },
     {
       "key": "varietyShow",
       "title": "综艺",
-      "url": "https://tvfan.xxooo.cf/index.php/vodshow/4--------${pageNumber}---.html",
+      "url": "https://wogg.link/index.php/vodshow/4--------${pageNumber}---.html",
       "timeout": 120,
       "javascript": "buildMedias"
     },
     {
       "key": "shorts",
       "title": "短剧片库",
-      "url": "https://tvfan.xxooo.cf/index.php/vodshow/6--------${pageNumber}---.html",
+      "url": "https://wogg.link/index.php/vodshow/6--------${pageNumber}---.html",
       "timeout": 120,
       "javascript": "buildMedias"
     },
     {
       "key": "music",
       "title": "音乐片库",
-      "url": "https://tvfan.xxooo.cf/index.php/vodshow/5--------${pageNumber}---.html",
+      "url": "https://wogg.link/index.php/vodshow/5--------${pageNumber}---.html",
       "timeout": 120,
       "javascript": "buildMedias"
     }
@@ -66,7 +66,7 @@
   },
   "search": {
     "timeout": 120,
-    "url": "https://tvfan.xxooo.cf/index.php/vodsearch/-------------.html?wd=${keyword}",
+    "url": "https://wogg.link/index.php/vodsearch/-------------.html?wd=${keyword}",
     "javascript": "Search"
   }
 }
