--- a/plugin_wogg/config.json
+++ b/plugin_wogg/config.json
@@ -9,7 +9,7 @@
     {
       "key": "index",
       "title": "首頁",
-      "url": "https://tvfan.xxooo.cf?page=${pageNumber}",
+      "url": "https://wogg.link?page=${pageNumber}",
       "timeout": 120,
       "javascript": "buildMedias_index"
     },
