--- a/plugin_wogg/config.json
+++ b/plugin_wogg/config.json
@@ -3,7 +3,7 @@
   "description": "阿里雲盤資源庫",
   "notification": "",
   "host": "https://wogg.link/",
-  "files": ["app.js", "txml.js"],
+  "files": ["txml.js", "app.js"],
   "permission": "AliDrive",
   "pages": [
     {
