--- a/plugin_wobge/config.json
+++ b/plugin_wobge/config.json
@@ -66,7 +66,7 @@
   },
   "search": {
     "timeout": 120,
-    "url": "https://wobge.run.goorm.io/index.php/vodsearch/-------------.html?wd=${keyword}",
+    "url": "https://wobge.run.goorm.io/index.php/vod/search.html?wd=${keyword}",
     "javascript": "Search"
   }
 }
