--- a/plugin_olevod/config.json
+++ b/plugin_olevod/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "歐樂影院",
+  "name": "新歐樂影院",
   "description": "海外 IP 無廣告",
   "notification": "需要使用非中國 IP 訪問",
   "host": "https://www.olevod.tv/",
