plugin_colafun 修正搜尋功能

--- a/plugin_colafun/config.json
+++ b/plugin_colafun/config.json
@@ -33,6 +33,6 @@
   },
   "search": {
     "url": "https://m.colafun.com/search.html?name=${keyword}",
-    "javascript": "buildMedias"
+    "javascript": "buildSearchMedias"
   }
 }
