歐樂追加了短劇分類，隱藏了 VIP 內容

--- a/plugin_olevod/config.json
+++ b/plugin_olevod/config.json
@@ -27,6 +27,13 @@
       "javascript": "buildMedias"
     },
     {
+      "key": "shorts",
+      "title": "短劇",
+      "url": "https://api.olelive.com/v1/pub/vod/list/true/3/0/0/14/0/0/update/${pageNumber}/48",
+      "timeout": 20,
+      "javascript": "buildMedias"
+    },
+    {
       "key": "variety",
       "title": "综艺",
       "url": "https://api.olelive.com/v1/pub/vod/list/true/3/0/0/3/0/0/update/${pageNumber}/48",
