--- a/plugin_olevod/config.json
+++ b/plugin_olevod/config.json
@@ -1,7 +1,7 @@
 {
   "name": "新歐樂影院",
   "description": "海外 IP 無廣告",
-  "notification": "需要使用非中國 IP 訪問",
+  "notification": "阻擋中國地區訪問",
   "host": "https://www.olevod.tv/",
   "files": ["crypto-js.min.js", "main.js"],
   "pages": [
